# florr-code-practice

./: Cargo.toml
.github/workflows/: publish.yml  release.yml
src/: main.rs
